--- a/index.html
+++ b/index.html
@@ -12,17 +12,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <div class="card">
-    <div class="qr-code">
-      <img class="qr-image" src="images/image-qr-code.png" alt="QR code on blue background" width="288" height="288">
-    </div>
+    
+    <img class="qr-code" src="images/image-qr-code.png" alt="QR code on blue background">
+    
     <div class="text">
       <h2>Improve your front-end skills by building projects</h2>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
@@ -30,8 +25,8 @@
   </div>
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Melissa</a>.
+    Challenge by <a href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://www.frontendmentor.io/profile/MelissaZhuu" target="_blank">Melissa</a>.
   </div>
 </body>
 </html>
